src/main/java/com/example/task/management/application/error/exception/ResourceNotFoundException.java
package com.example.task.management.application.error.exception;

public class ResourceNotFoundException extends RuntimeException{

    public ResourceNotFoundException(String message){
        super(message);
    }

}
